# rare-os

./: .gitignore  README.md
.github/workflows/: build-rare-os.yml
initramfs/: init
rare-engine/: Cargo.toml
rare-engine/src/: main.rs
