[package]
name = "rare-engine"
version = "0.1.0"
edition = "2021"
description = "RARE OS Core Engine - GGUF Loader via Candle"

[dependencies]
# candle-core 0.10.x usa rand 0.9.x nativamente, corrigindo o conflito 0.8/0.9
candle-core = { version = "0.10.2", default-features = false }

# Utilitários
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
