[package]
name = "rare-engine"
version = "0.1.0"
edition = "2021"
description = "RARE OS Core Engine - Qwen2.5-1.5B Forward Pass"

[dependencies]
candle-core = { version = "0.10.2", default-features = false }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
# tokenizers com fancy-regex (100% Rust puro, sem deps C, musl-safe)
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
